--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "*.html": "html",
         "type_traits": "c",
-        "utility": "c"
+        "utility": "c",
+        "minishell.h": "c"
     }
 }
